examples/test/testpolicy9186.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9186
  namespace: namespace57
spec:
  podSelector:
    matchLabels:
      key27: value34
      key19: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value22
          key22: value25
      podSelector:
        matchLabels:
          key6: value5
          key13: value46
          key29: value26
